--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/bankapi
 spring.datasource.username=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
